Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@
             <li><strong>Address:</strong> Government Graduate College Sammundri, Faisalabad, Punjab, Pakistan</li>
             <li><a href="https://chat.whatsapp.com/CXIVMP5jYbO2TBL8zqlOsW" target="_blank"><strong>Join Class WhatsApp Group Here</strong></a></li>
             <li><strong>Developers:</strong> Zawar Baig & Ali Haider</li>
+             <li>CR: Muhammad Rizwan</li>
+            <li>Comuter Science Professor Ghulam Hussain</li>
             
            <li>Thanks For: ❤</li>
         </ul>
@@ -322,4 +324,5 @@
     </footer>
 
 </body>
+
 </html>
